[gd_scene load_steps=8 format=3 uid="uid://b41yktwicrp0j"]

[ext_resource type="Script" uid="uid://dvge4fbuxvild" path="res://Scene/background_2d.gd" id="1_87ipw"]
[ext_resource type="Texture2D" uid="uid://dehwhc3s4xula" path="res://Animation/SpriteSheets/Pixel-art-village-splash-art.png" id="1_ftydy"]
[ext_resource type="Script" uid="uid://yx2b0ol6km52" path="res://Scene/main_menu.gd" id="1_hii65"]

[sub_resource type="Animation" id="Animation_hii65"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect21:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kqsxi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect21:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_pvidh"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect21:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333334, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hptlk"]
_data = {
&"RESET": SubResource("Animation_kqsxi"),
&"fade_in": SubResource("Animation_hii65"),
&"fade_out": SubResource("Animation_pvidh")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 12.0
offset_right = 9.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hii65")

[node name="Background2d" type="Node2D" parent="."]
position = Vector2(34, 3)
script = ExtResource("1_87ipw")

[node name="SpriteA" type="Sprite2D" parent="Background2d"]
modulate = Color(0.521141, 0.521141, 0.521141, 0.94902)
position = Vector2(-33, -15)
scale = Vector2(1.54595, 1.31237)
texture = ExtResource("1_ftydy")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="Background2d"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 386.0
offset_top = 298.0
offset_right = 699.0
offset_bottom = 451.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="Background2d/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="Background2d/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="Background2d/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="ColorRect21" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.1042, 9.69233e-06, 0.10593, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect21"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_hptlk")
}
speed_scale = 0.105

[connection signal="pressed" from="Background2d/VBoxContainer/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Background2d/VBoxContainer/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Background2d/VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="ColorRect21/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
